# Proyecto_MPI_Matrices

./: .gitignore  CMakeLists.txt  Makefile  README.md  multiplicar_matrices
src/: main.c  matrix_ops.c  matrix_ops.h  mpi_ops.c  mpi_ops.h
